--- a/chinese.html
+++ b/chinese.html
@@ -27,7 +27,7 @@
             		</p>
           		</div>
         	</div>  
-        	<button type="button" class="navbar-toggler " data-toggle="collapse" data-target="#navbarMenu">
+        	<button type="button" id="navbarToggle" class="navbar-toggler " data-toggle="collapse" data-target="#navbarMenu">
           				<!-- navbar-toggle : this class controls the positioning of this whole button -->
             			<!-- sr-only Hide an element to all devices except screen readers -->
             			<span class="navbar-toggler-icon"></span> <!-- -->
@@ -112,7 +112,8 @@
       <div class="text-center">&copy; Copyright David Chu's China Bistro 2016</div>
     </div>
   </footer>
-
+  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+<script src=".\script.js"></script>
 <!-- jQuery (Bootstrap JS plugins depend on it) -->
 <script src="\bootstrap\js\jquery.min.js"></script>
 <script src="\bootstrap\js\bootstrap.min.js"></script>
